白名单pt春天域名增加

--- a/forClash/ruleList/Whitelist.yaml
+++ b/forClash/ruleList/Whitelist.yaml
@@ -36,6 +36,8 @@ payload:
 - DOMAIN-SUFFIX,m-team.cc
 - DOMAIN-SUFFIX,hdsky.me
 - DOMAIN-SUFFIX,springsunday.net
+- DOMAIN-SUFFIX,hdcmct.com
+- DOMAIN-SUFFIX,hdcmct.org
 - DOMAIN-SUFFIX,hdhome.org
 - DOMAIN-SUFFIX,hdarea.club
 - DOMAIN-SUFFIX,hdarea.club
