--- a/forClash/ruleList/blacklist.yaml
+++ b/forClash/ruleList/blacklist.yaml
@@ -36,3 +36,5 @@ payload:
 - DOMAIN-SUFFIX,yandex.com
 - DOMAIN-SUFFIX,yandex.net
 - DOMAIN-SUFFIX,speedtest.net
+- DOMAIN-KEYWORD,speedtest.com
+- DOMAIN-KEYWORD,speedtest.net
