补充speedtest上传代理

--- a/forClash/ruleList/blacklist.yaml
+++ b/forClash/ruleList/blacklist.yaml
@@ -36,5 +36,6 @@ payload:
 - DOMAIN-SUFFIX,yandex.com
 - DOMAIN-SUFFIX,yandex.net
 - DOMAIN-SUFFIX,speedtest.net
+- DOMAIN-SUFFIX,ooklaserver.net
 - DOMAIN-KEYWORD,speedtest.com
 - DOMAIN-KEYWORD,speedtest.net
