补充speedtest测速服务器地址

--- a/forClash/ruleList/blacklist.yaml
+++ b/forClash/ruleList/blacklist.yaml
@@ -37,5 +37,7 @@ payload:
 - DOMAIN-SUFFIX,yandex.net
 - DOMAIN-SUFFIX,speedtest.net
 - DOMAIN-SUFFIX,ooklaserver.net
+- DOMAIN-SUFFIX,fdcservers.net
+- DOMAIN-SUFFIX,i3d.net
 - DOMAIN-KEYWORD,speedtest.com
 - DOMAIN-KEYWORD,speedtest.net
