--- a/forClash/ruleList/blacklist.yaml
+++ b/forClash/ruleList/blacklist.yaml
@@ -46,3 +46,5 @@ payload:
 - DOMAIN-SUFFIX,azure.net
 - DOMAIN-SUFFIX,microsoft.com
 - DOMAIN-SUFFIX,microsoftonline.com
+- DOMAIN-SUFFIX,live.com
+- DOMAIN-SUFFIX,outlook.com
