更新 Whitelist.yaml
ykk官网

--- a/forClash/ruleList/Whitelist.yaml
+++ b/forClash/ruleList/Whitelist.yaml
@@ -79,6 +79,7 @@ payload:
 - DOMAIN,mojie.app
 - DOMAIN,mojie0201.xn--8stx8olrwkucjq3b.com
 - DOMAIN,8y73j9wh8b1.ykkk.best
+- DOMAIN,8xn3salcd.ykkk.best
 
 
 
