--- a/SubConver/ykk.ini
+++ b/SubConver/ykk.ini
@@ -60,7 +60,7 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📲 Telegram`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
-custom_proxy_group=💬 OpenAi`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
+custom_proxy_group=💬 OpenAI`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=📹 油管视频`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=💦 Pornhub`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
