--- a/SubConver/ykk.ini
+++ b/SubConver/ykk.ini
@@ -1,3 +1,7 @@
+; https://raw.githubusercontent.com/imshonechen/CustomRules/main/SubConver/ykk.ini
+; 规则来源:
+; https://github.com/ACL4SSR/ACL4SSR
+; https://github.com/blackmatrix7/ios_rule_script
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
@@ -63,8 +67,8 @@ custom_proxy_group=📲 Telegram`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 
 custom_proxy_group=💬 OpenAI`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=📹 油管视频`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
+custom_proxy_group=🎥 Tiktok`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=💦 Pornhub`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
-custom_proxy_group=🎥 奈飞视频`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 
 custom_proxy_group=📺 巴哈姆特`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
 custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🚀 节点选择`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`.*
