--- a/SubConver/wd.ini
+++ b/SubConver/wd.ini
@@ -142,7 +142,7 @@ rename_node=(新加坡|坡|狮城|SG|Singapore)@新加坡
 rename_node=(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)@日本
 rename_node=(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)@美国
 rename_node=(多伦多|温哥华|渥太华CA|CAN|Canada)@加拿大
-rename_node=!!GROUPID=1+!!(英|大不列颠|伦敦|UK|GB|GBR|United Kingdom|UnitedKingdom)@英国
+rename_node=!!GROUPID=!0!!(英|大不列颠|伦敦|UK|GB|GBR|United Kingdom|UnitedKingdom)@英国
 rename_node=(德|柏林|DE|DEU|Germany)@德国
 rename_node=(阿姆斯特丹|荷|NL|NLD|Netherlands)@荷兰
 rename_node=(意|罗马|IT|ITA|Italy)@意大利
