添加重命名节点

--- a/SubConver/MyCustom.ini
+++ b/SubConver/MyCustom.ini
@@ -60,6 +60,12 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 
+custom_proxy_group=🇭🇰 香港手动`select`(港|HK|hk|Hong Kong|HongKong|hongkong)
+custom_proxy_group=🇹🇼 台湾手动`select`(台|新北|彰化|TW|Taiwan)
+custom_proxy_group=🇯🇵 日本手动`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
+custom_proxy_group=🇸🇬 新加坡手动`select`(新加坡|坡|狮城|SG|Singapore)
+custom_proxy_group=🇺🇲 美国手动`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
+custom_proxy_group=🇰🇷 韩国手动`select`(KR|Korea|KOR|首尔|韩|韓)
 
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港手动`[]🇹🇼 台湾手动`[]🇯🇵 日本手动`[]🇸🇬 新加坡手动`[]🇰🇷 韩国手动`[]🇺🇲 美国手动`[]🇭🇰 香港自动`[]🇹🇼 台湾自动`[]🇯🇵 日本自动`[]🇸🇬 新加坡自动`[]🇰🇷 韩国自动`[]🇺🇲 美国自动`[]🚀 手动切换`[]DIRECT`.*
 
@@ -102,14 +108,72 @@ custom_proxy_group=🇸🇬 新加坡自动`url-test`(新加坡|坡|狮城|SG|Si
 custom_proxy_group=🇺🇲 美国自动`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇰🇷 韩国自动`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇭🇰 香港手动`select`(港|HK|hk|Hong Kong|HongKong|hongkong)
-custom_proxy_group=🇹🇼 台湾手动`select`(台|新北|彰化|TW|Taiwan)
-custom_proxy_group=🇯🇵 日本手动`select`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)
-custom_proxy_group=🇸🇬 新加坡手动`select`(新加坡|坡|狮城|SG|Singapore)
-custom_proxy_group=🇺🇲 美国手动`select`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)
-custom_proxy_group=🇰🇷 韩国手动`select`(KR|Korea|KOR|首尔|韩|韓)
 
-;设置分组标志位
+
+; 重命名节点，支持正则匹配。使用方式：原始命名@重命名
+; 将节点名改为中文
+rename_node=Traffic@流量
+rename_node=Expire@有效期
+rename_node= GB@G
+rename_node= (MITM)@劫持
+; 亚洲
+rename_node=(广港|港|HKG|HK|hk|Hong Kong|HongKong|hongkong)@东亚_香港
+rename_node=(台|新北|彰化|TWN|TW|Taiwan)@东亚_台湾
+rename_node=(MAC|MO|Macao)@东亚_澳门
+rename_node=(新加坡|坡|狮城|SGP|SG|Singapore)@东南亚_新加坡
+rename_node=(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JPN|JP|Japan)@东亚_日本
+rename_node=(首尔|南韩|韩|韓|KR|KOR|Korea)@东亚_韩国
+rename_node=(平壤|北韩|北朝鲜|PRK|KP|North Korea|N. Korea)@东亚_朝鲜
+rename_node=(曼谷|TH|THA|Thailand)@东南亚_泰国
+rename_node=(河内|胡志明|VN|VNM|Vietnam)@东南亚_越南
+rename_node=(吉隆坡|布城|马国|大马|MY|MYS|Malaysia)@东南亚_马来西亚
+rename_node=(马尼拉市|马尼拉|奎松|PHL|PH|Philippines)@东南亚_菲律宾
+rename_node=(新德里|孟买|IN|IND|India)@南亚_印度
+rename_node=(耶路撒冷|IL|ISR|Israel)@西亚_以色列
+
+rename_node=(安卡拉|伊斯坦布尔|TR|TUR|Turkey)@欧亚_土耳其
+; 欧洲
+rename_node=(巴黎|法兰西|FRA|FR|France)@西欧_法国
+rename_node=(英|大不列颠|伦敦|GBR|UK|GB|United Kingdom|UnitedKingdom)@西欧_英国
+rename_node=(京德|德|柏林|DE|DEU|Germany)@中西欧_德国
+rename_node=(苏黎世|CHE|CH|Switzerland)@中欧_瑞士
+rename_node=(阿姆斯特丹|荷|NL|NLD|Netherlands)@西北欧_荷兰
+rename_node=(意|罗马|IT|ITA|Italy)@南欧_意大利
+rename_node=(VAT|VA|Vaticinia)@南欧_梵蒂冈
+rename_node=(马德里|ES|ESP|Spain)@西南欧_西班牙
+rename_node=(雅典|GRC|GR|Greece)@东南欧_希腊
+; 大洋洲
+rename_node=(堪培拉|悉尼|墨尔本|澳洲|AU|AUS|Australia)@大洋洲_澳大利亚
+rename_node=(NZL|NZ|New Zealand)@大洋洲_新西兰
+; 北美洲
+rename_node=(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|USA|US|United States|UnitedStates)@北美_美国
+rename_node=(多伦多|温哥华|渥太华|CAN|CA|Canada)@北美_加拿大
+rename_node=(MEX|MX|Mexico)@北美_墨西哥
+rename_node=(努克|GRL|GL|Greenland)@北美_格陵兰
+rename_node=(哈瓦那|CUB|CU|Cuba)@北美_古巴
+
+rename_node=(PAN|PA|Panama)@中美洲_巴拿马
+; 南美洲
+rename_node=(AR|ARG|Argentina)@南美_阿根廷
+rename_node=(圣保罗|巴西利亚|BR|BRA|Brazil)@南美_巴西
+rename_node=(圣地亚哥|CL|CHL|Chile)@南美_智利
+; 非洲
+rename_node=(开罗|EGY|EG|Egypt)@北非_埃及
+rename_node=(比勒陀利亚|开普敦|布隆方丹|约翰内斯堡|ZA|ZAF|South Africa|SouthAfrica|Johannesburg)@非洲_南非
+rename_node=(阿布贾|拉各斯|NGA|NG|Nigeria)@西非_尼日利亚
+; 南极洲
+rename_node=(ATA|AQ|Antarctica)@南极洲
+
+; 其它
+rename_node=(home|Home|HOME)@家宽
+
+; emoji设置
+rename_node=(🇬🇧 |💣 |🇭🇰 |🇨🇳 |🇹🇼 |🇸🇬 |🇯🇵 |🇺🇸 |🇨🇦 |🇬🇧 |🇩🇪 |🇳🇱 |🇮🇹 |🇪🇸 |🇹🇷 |🇦🇺 |🇦🇷 |🇧🇷 |🇨🇱 |🇰🇷 |🇮🇳 |🇮🇱 |🇹🇭 |🇻🇳 |🇲🇾 |🇿🇦 |🚀 |♻️ |🔯 |🔮 |📲 |💬 |📹 |🎥 |💦 |📺 |🌍 |📢 |Ⓜ️ |🍎 |🎮 |🎶 |🎯 |🛑 |🍃 |🆎 |🛡️ |🐟 )@
+;add_emoji=true
+remove_old_emoji=true
+;emoji=(流量|时间|应急),🏳️‍🌈
+;emoji=阿根廷,🇦🇷
+
 
 enable_rule_generator=true
 overwrite_original_rules=true
