--- a/forClash/ruleList/EmbyService.yaml
+++ b/forClash/ruleList/EmbyService.yaml
@@ -32,6 +32,7 @@ payload:
 #facmata: Peach, 1111, PiliPili, PornEMBY，Misty
 - DOMAIN-SUFFIX,makima.online
 - DOMAIN-SUFFIX,313445.xyz
+- DOMAIN-SUFFIX,jiashule.com
 
 # niceduck:dpx, 1111,JMS
 - DOMAIN-SUFFIX,niceduck.lol
