--- a/forClash/SubConver/MyCustom.ini
+++ b/forClash/SubConver/MyCustom.ini
@@ -2,6 +2,7 @@
 ; 规则来源:
 ; https://github.com/ACL4SSR/ACL4SSR
 ; https://github.com/blackmatrix7/ios_rule_script
+; https://github.com/Loyalsoldier/clash-rules
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
@@ -64,15 +65,15 @@ ruleset=走向全球,[]FINAL
 ; --手动切换--  手动切换节点
 custom_proxy_group=手动切换`select`[]DIRECT`[]香港`[]台湾`[]日本`[]新加坡`[]美国`[]香港最快`[]台湾最快`[]日本最快`[]新加坡最快`[]美国最快`[]故障转移`高倍率`.*
 ; --香港非高倍率--  包含香港自动选择和手动选择
-custom_proxy_group=香港`select`(^(?=.*(?:香港|HK|hk|Hong Kong|HongKong|hongkong))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
+custom_proxy_group=香港`select`((?i)^(?=.*(?:香港|HongKong|Hong Kong|HKG|HK))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
 ; --台湾非高倍率--  包含台湾自动选择和手动选择
-custom_proxy_group=台湾`select`(^(?=.*(?:台湾|新北|彰化|TW|Taiwan))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
+custom_proxy_group=台湾`select`((?i)^(?=.*(?:台湾|新北|彰化|Taiwan|TWN|TW))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
 ; --日本非高倍率--  包含日本自动选择和手动选择
-custom_proxy_group=日本`select`(^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
+custom_proxy_group=日本`select`((?i)^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|Japan|JPN|JP))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
 ; --新加坡非高倍率--  包含新加坡自动选择和手动选择
-custom_proxy_group=新加坡`select`(^(?=.*(?:新加坡|狮城|SGP|SG|Singapore))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
+custom_proxy_group=新加坡`select`((?i)^(?=.*(?:新加坡|狮城|Singapore|SGP|SG))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
 ; --美国非高倍率--  包含美国自动选择和手动选择
-custom_proxy_group=美国`select`(^(?=.*(?:美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|America))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
+custom_proxy_group=美国`select`((?i)^(?=.*(?:美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|UnitedStates|United States|America|USA|US))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
 ; --韩国非高倍率--  包含韩国自动选择和手动选择
 ; custom_proxy_group=韩国`select`(^(?=.*(?:韩国|Korea|KOR|KR|首尔|韩|韓))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)
 ; --高倍率节点--  包含所有大于1x的倍率节点
@@ -121,15 +122,15 @@ custom_proxy_group=全球直连`select`[]DIRECT`.*
 custom_proxy_group=走向全球`select`[]手动切换`.*
 
 ; --香港非高倍率自动--  香港延迟最低的节点
-custom_proxy_group=香港最快`url-test`(^(?=.*(?:香港|HK|hk|Hong Kong|HongKong|hongkong))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=香港最快`url-test`((?i)^(?=.*(?:香港|HongKong|Hong Kong|HKG|HK))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,50
 ; --台湾非高倍率自动--  台湾延迟最低的节点
-custom_proxy_group=台湾最快`url-test`(^(?=.*(?:台湾|新北|彰化|TW|Taiwan))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,70
+custom_proxy_group=台湾最快`url-test`((?i)^(?=.*(?:台湾|新北|彰化|Taiwan|TWN|TW))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,70
 ; --日本非高倍率自动--  日本延迟最低的节点
-custom_proxy_group=日本最快`url-test`(^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,85
+custom_proxy_group=日本最快`url-test`((?i)^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|Japan|JPN|JP))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,85
 ; --新加坡非高倍率自动--  新加坡延迟最低的节点
-custom_proxy_group=新加坡最快`url-test`(^(?=.*(?:新加坡|狮城|SGP|SG|Singapore))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,85
+custom_proxy_group=新加坡最快`url-test`((?i)^(?=.*(?:新加坡|狮城|Singapore|SGP|SG))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,85
 ; --美国非高倍率自动--  美国延迟最低的节点
-custom_proxy_group=美国最快`url-test`(^(?=.*(?:美国|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|America))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=美国最快`url-test`((?i)^(?=.*(?:美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|UnitedStates|United States|America|USA|US))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,200
 ; --韩国非高倍率自动--  韩国延迟最低的节点
 ; custom_proxy_group=韩国最快`url-test`(^(?=.*(?:韩国|Korea|KOR|KR|首尔|韩|韓))(?:(?!.*(?:[1-9][.]\d*(?:x|倍率)|[2-9](?:x|倍率)|[1-9][0-9]+(?:x|倍率))).*(?:(?:[0-1](?:\.\d+)?(?:x|倍率))|(?<![\d.])1(?:x|倍率)|^(?!.*(?:x|倍率)).*)?)$)`http://www.gstatic.com/generate_204`300,,120
 
