--- a/forClash/ruleList/go_cn.yaml
+++ b/forClash/ruleList/go_cn.yaml
@@ -50,5 +50,5 @@ payload:
 
 - DOMAIN-SUFFIX,gifyu.com # 触摸春天用的图床
 
-- DOMAIN-SUFFIX,linux.do # L站走直连试试
-- DOMAIN,api.deeplx.org # 翻译
+# - DOMAIN-SUFFIX,linux.do # L站走直连不太稳，有时候会卡
+# - DOMAIN,api.deeplx.org # 翻译
