--- a/forClash/ruleList/emby_service.yaml
+++ b/forClash/ruleList/emby_service.yaml
@@ -30,9 +30,10 @@ payload:
 - DOMAIN-SUFFIX,emby.moe
 
 #facmata: Peach, 1111, PiliPili, PornEMBY，Misty
-- DOMAIN-SUFFIX,makima.online
+# - DOMAIN-SUFFIX,makima.online
+# - DOMAIN-SUFFIX,jiashule.com
 - DOMAIN-SUFFIX,313445.xyz
-- DOMAIN-SUFFIX,jiashule.com
+
 
 # niceduck:dpx, 1111,JMS
 - DOMAIN-SUFFIX,niceduck.lol
