--- a/forClash/ruleList/go_global.yaml
+++ b/forClash/ruleList/go_global.yaml
@@ -51,17 +51,17 @@ payload:
 # - DOMAIN-SUFFIX,outlook.com
 
 - DOMAIN-SUFFIX,okjc.one
-
 - DOMAIN,rutracker.ru
-
 - DOMAIN-SUFFIX,qbittorrent.org
 
+
+# 套CF的站点，直连太慢了。date: 250511
 - DOMAIN-SUFFIX,hostloc.com
-# 套CF的站点，直连太慢了。250511
 - DOMAIN-SUFFIX,linux.do # L站 走直连不太稳，有时候会卡
 - DOMAIN,api.deeplx.org # L站 翻译
 
 - DOMAIN-SUFFIX,haitunt.org # 海豚
+# 机场
 - DOMAIN-SUFFIX,mojie.app
 - DOMAIN,mojie0201.xn--8stx8olrwkucjq3b.com
 - DOMAIN-SUFFIX,ykkk.best
@@ -73,5 +73,26 @@ payload:
 - DOMAIN-SUFFIX,kuromis.com
 - DOMAIN-SUFFIX,dlercloud.com
 - DOMAIN-SUFFIX,flowercloud.net
-- DOMAIN-SUFFIX,wd-gold.com
+- DOMAIN-SUFFIX,wd-gold.com # 西数
+- DOMAIN-SUFFIX,halo.do # 光环
+- DOMAIN-SUFFIX,linkcube.org # 绿叶
+- DOMAIN-SUFFIX,shadowsocks.au # xtom
+- DOMAIN-SUFFIX,jinglongyu.com # CTC
+- DOMAIN-SUFFIX,synn.moe # SYN
+- DOMAIN-SUFFIX,creamdata.net # 奶油
+- DOMAIN-SUFFIX,paoluz.plus # 跑路云
+- DOMAIN-SUFFIX,linkeless.com
+- DOMAIN-SUFFIX,afun.la # 爱翻
+- DOMAIN-SUFFIX,垃圾机场.com # 薯条
+- DOMAIN-SUFFIX,bkcloud.sbs
+- DOMAIN-SUFFIX,y-too.com
+- DOMAIN-SUFFIX,to-ytoo.xyz
+- DOMAIN-SUFFIX,fanrr.net # 繁荣云
+- DOMAIN-SUFFIX,ikuuu.one
+- DOMAIN-SUFFIX,mesl.cloud
+- DOMAIN-SUFFIX,tagxx.vip
+- DOMAIN-SUFFIX,bygcloud.com # 白月光
+
+# emby
+- DOMAIN-SUFFIX,emby.moe
 - DOMAIN-SUFFIX,emby.wiki
