添加: 华为云国际站

--- a/forClash/ruleList/go_global.yaml
+++ b/forClash/ruleList/go_global.yaml
@@ -93,7 +93,8 @@ payload:
   - DOMAIN-SUFFIX,tagxx.vip
   - DOMAIN-SUFFIX,bygcloud.com # 白月光
 
-
-
   # mitm
   - DOMAIN-SUFFIX,mitm.it
+
+  # 华为云国际
+  - DOMAIN,console-intl.huaweicloud.com
